--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,17 @@ main {
   --secondary: #f3a847;
   --tertiary: #b12704;
   --light: #fafafa;
-  --dark: #000000;
+  --dark: #0a192f;
   --darker: #111111;
+  --text-primary: #495670;
+  --text-secondary: #8892b0;
+  --text-tertiary: #a8b2d1;
+  --text-lightest: #ccd6f6;
+  --white: #e6f1ff;
+  --fun-text: #64ffda;
+  --green-tint: rgba(100, 255, 218, 0.1);
+  --highlight-1: #f57dff;
+  --hightligh-2: #57cbff;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -50,31 +59,31 @@ h6 {
 }
 
 h1 {
-  font-size: 2.25rem;
+  font-size: 4.25rem;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 h3 {
-  font-size: 1.75rem;
+  font-size: 2.75rem;
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 h5 {
-  font-size: 1.25rem;
+  font-size: 2.25rem;
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: 1.6rem;
   margin-top: 0;
 }
 
@@ -88,14 +97,20 @@ a:hover {
   text-decoration: underline;
 }
 
-header {
+header footer {
   background: var(--dark);
+  color: var(--fun-text);
+
 }
 
-header a {
-  color: var(--light);
+header  a {
+  color: var(--fun-text);
 }
 
+footer a {
+    color: var(--fun-text);
+
+}
 button {
   font-size: 1rem;
   text-decoration: none;
